# mnemos

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: testing.yml
application/: CMakeLists.txt  game_app.cpp  game_app.hpp  main.cpp
engine/: CMakeLists.txt  application.cpp  application.hpp
engine/core/: assert.hpp  isubsystem.hpp  logging.hpp
engine/core/filesystem/: filesystem.cpp  filesystem.hpp  resource_manager.cpp  resource_manager.hpp
engine/core/logging/: console_logger.cpp  console_logger.hpp  default_logger.hpp  ilogger.hpp  logger_manager.cpp  logger_manager.hpp
engine/core/parsers/: asset_loader.cpp  asset_loader.hpp
engine/core/time/: frame_timer.cpp  frame_timer.hpp  itimer.hpp
engine/math/: matrix.hpp  vector.hpp
engine/platform/: platform.hpp  platform_linux.cpp  platform_linux.hpp  types.hpp
engine/platform/input/: inputsystem.cpp  inputsystem.hpp  keycodes.hpp
engine/platform/window/: iwindow.hpp  window_linux.cpp  window_linux.hpp  window_win32.cpp  window_win32.hpp
engine/renderer/: camera.cpp  camera.hpp  irenderer.hpp  renderable.hpp  transform.hpp  vertex.hpp
engine/renderer/material/: material.cpp  material.hpp  material_factory.cpp  material_factory.hpp
engine/renderer/opengl/: debug_output.hpp  glad.c  glrenderer.cpp  glrenderer.hpp  index_buffer.cpp  index_buffer.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
include/glad/: glad.h
resources/shaders/: phong.frag  shader.frag  shader.vert  unlit.frag
tests/: CMakeLists.txt  types_test.cpp
tests/core/: filesystem_test.cpp  mock_file.txt  mock_logger.hpp  timer_test.cpp
tests/math/: matrix_test.cpp  vector_test.cpp
tests/platform/: inputsystem_test.cpp  types_test.cpp  window_test.cpp
